--- a/public/style.css
+++ b/public/style.css
@@ -868,8 +868,87 @@ body{
       }
 
       .appimg img{
-        filter: grayscale();
+        /* filter: grayscale(); */
+        filter: sepia(100%) hue-rotate(180deg) saturate(490%);
       }
 
+   .play{
+    width: 100px;
+    height: 100px;
+    /* background-color: #000000; */
+    position: absolute;
+    z-index: 20;
+    margin: auto;
+   }
+   .play img{
+    width: 100px;
+    height: 100px;
+   }
+   .video{
+    /* border: 4px solid red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   }
 
-      
+
+   .video:hover{
+        cursor: pointer;
+   }
+/*       
+ .playimg{
+    color: #fff;
+    font-size: 50px;
+    z-index: 2;
+    border-radius: 100%;
+    background: #f60;
+ }
+   .playimg:before{
+        content: '';
+        position: absolute;
+        border: 15px solid #fff;
+        border-radius: 50%;
+        top: -20px;
+        left: -20px;
+        right: -20px;
+        bottom:-20px;
+        animation: bloom1 1.5s linear infinite;
+        opacity: 0;
+        z-index: 1;
+   }
+   .playimg:after{
+    content: '';
+    position: absolute;
+    border: 15px solid #fff;
+    border-radius: 50%;
+    top: -20px;
+    left: -20px;
+    right: -20px;
+    bottom:-20px;
+    animation: bloom2 1.5s linear infinite;
+    opacity: 0;
+        z-index: 1;
+        animation-delay: .4s;
+}
+@keyframes bloom1{
+    0%{
+        trasnform:scale(.5);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1.5);
+    }
+}
+@keyframes bloom2{
+    0%{
+        trasnform:scale(.5);
+    }
+    50%{
+        opacity: 1;
+    }
+    100%{
+        transform: scale(1.5);
+    }
+} */
