--- a/src/styles.css
+++ b/src/styles.css
@@ -2749,6 +2749,11 @@ position: relative;
         left: 50px;
     }
 }
+@media (max-width:1500px) and (min-width:1200px){
+.spcefic li {
+    width: 372px;
+}
+}
 
 @media (max-width:700px) and (min-width:100px){
 .adis {
