--- a/src/styles.css
+++ b/src/styles.css
@@ -2773,3 +2773,9 @@ position: relative;
     left: -1px;
 }
 }
+
+@media (max-width: 900px) and (min-width: 300px){
+.nav {
+    background-color: white;
+}
+}
